<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafetyTracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start__app">Start_App</string>
    <string name="menuStartActivity">Start </string>
    <string name="menuLogs">Logs</string>
    <string name="menuUserInfo">User Info</string>
    <string name="startApp_dockMessage">        Please dock your phone.
        Tap Begin when ready.</string>
    <string name="startApp_BeginButtonText">Begin</string>
    <string name="title_activity_begin">BeginActivity</string>
    <string name="begin_Instruction">Instructions</string>
    <string name="begin_InstructionText"> 1) For optimal results, dock your phone parallel to the driver.\n
        											   2) Make it perpendicular to the windshield.\n
        											   3) Wait until it calibrates.\n
        											   4) Drive safe.\n
        											  
        											  </string>
    <string name="begin_StopButtonText">Stop</string>
    <string name="title_activity_logs">Logs</string>
    <string name="userInfo_NameText">Name</string>
    <string name="userInfo_NameForUser">Temporary Name</string>
    <string name="userInfo_AgeText">Age</string>
    <string name="userInfo_Age">Temporary Age</string>
    <string name="userInfo_PhoneText">Phone:</string>
    <string name="userInfo_PhoneNumber">(555) 555-5555</string>
    <string name="userInfo_EmailText">Email:</string>
    <string name="userInfo_Email">me@csupomona.edu</string>
    <string name="userInfo_EditUserButton">Edit User</string>
    <string name="userInfo_EditParentButton">Edit Parent</string>
    <string name="logs_SortByText">Sort By:</string>
    <string name="legal_TermsConditions">TERMS AND CONDITIONS</string>
    <string name="legal_AgreementLabel">Agreement</string>
    <string name="legal_AgreementText">You agree by using this app to continue 
        to abide by the rules of the road. Using this application by no means 
        allows you to start driving recklessly and endanger the lives of others or 
        yourself. The purpose of this application is merely to assist you in 
        becoming a better, safer driver.</string>
    <string name="legal_DisclaimerLabel">Disclaimer</string>
    <string name="legal_DisclaimerText">This app is not for use while operating 
        a vehicle. You, the user, are solely responsible for any situation that 
        may occur while operating a vehicle and using SafetyTracker. This app 
        is designed for use before and/or after operating a vehicle. Use extreme 
        caution while operating a vehicle. Always pay attention to the road and 
        please do not text and drive. It can wait.</string>
    <string name="legal_PrivacyLabel">Privacy</string>
    <string name="legal_PrivacyText">We will not provide any of your information 
        to third parties. Your information is solely used to provide you with a 
        better experience using our application.</string>
    <string name="aboutUs_ContactUs">Report bugs \n 
        								  or provide feedback</string>
    <string name="aboutUs_VisitUs">Visit our website</string>
    <string name="aboutUs_Social">Check us out at</string>
    <string name="aboutUs_Facebook">Facebook</string>
    <string name="aboutUs_Twitter">Twitter</string>

    <string-array name="spinnerarray">
        <item>Date</item>
        <item>Event</item>
        <item>Location</item>
    </string-array>
    
    <string-array name="mapsSpinnerArray">
        <item>sattelite</item>
        <item>hybrid</item>
        <item>terrain</item>     
   </string-array>

    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="calibrate_label">Calibrate</string>
    <string name="turnOnGPS_label">Turn On GPS</string>
    <string name="help_label">Help</string>
    <string name="legal_label">Legal</string>
    <string name="aboutUs_label">About Us</string>
    <string name="submit_label">Submit</string>
    <string name="setParent_label">Add a parent.</string>
    <string name="title_activity_edit__user_info">Edit_UserInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_parent_info">EditParentInfo</string>
    <string name="title_activity_edit__parent_info">Edit_ParentInfo</string>
    <string name="title_activity_legal">Legal</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="title_activity_email_screen">EmailScreen</string>
    <string name="email_sendToLabel">Send To:</string>
    <string name="email_subjectLabel">Subject:</string>
    <string name="email_messageLabel">Message</string>
    <string name="title_activity_helpscreen">Help</string>
    <string name="Help">Help</string>
    <string name="HelpStatement">To start your app (while you are not driving), tap \'Start App.\'  To view logs, tap \'Logs.\'  To view your info, tap \'User Info.\' To turn on GPS, tap \'Turn on GPS.\'  </string>
    <string name="HelpText2">If you are a parent, please provide at least one method to contact you, either via SMS or email. If you are the user, you must be ten years or older to use this app.  If you are having trouble, please contact us.</string>
    <string name="title_activity_calibratescreen">CalibrateScreen</string>
    <string name="CalibrateText">Please wait, currently calibrating...</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="title_activity_map">\tMap</string>

</resources>
