<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserInfoActivity" >

    <TextView
        android:id="@+id/userInfo_nameOfUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userIn_NameText"
        android:layout_below="@+id/userIn_NameText"
        android:text="@string/userInfo_NameForUser"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/logs_SortByText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userInfo_AgeText"
        android:layout_below="@+id/userInfo_AgeText"
        android:text="@string/userInfo_Age"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/userIn_NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="62dp"
        android:text="@string/userInfo_NameText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userInfo_AgeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userInfo_nameOfUser"
        android:layout_below="@+id/userInfo_nameOfUser"
        android:layout_marginTop="24dp"
        android:text="@string/userInfo_AgeText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userInfo_PhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/UserInfo_PhoneText"
        android:layout_alignBottom="@+id/UserInfo_PhoneText"
        android:layout_toRightOf="@+id/UserInfo_PhoneText"
        android:text="@string/userInfo_PhoneNumber"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userInfo_EmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UserInfo_PhoneText"
        android:layout_below="@+id/UserInfo_PhoneText"
        android:text="@string/userInfo_EmailText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/userInfo_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userInfo_EmailText"
        android:layout_below="@+id/userInfo_EmailText"
        android:text="@string/userInfo_Email"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/userInfo_EditUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userInfo_Email"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:text="@string/userInfo_EditUserButton" />

    <TextView
        android:id="@+id/UserInfo_PhoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/logs_SortByText"
        android:layout_below="@+id/logs_SortByText"
        android:layout_marginTop="35dp"
        android:text="@string/userInfo_PhoneText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/userInfo_EditParentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userInfo_EditUserButton"
        android:layout_alignBottom="@+id/userInfo_EditUserButton"
        android:layout_alignRight="@+id/userInfo_PhoneNumber"
        android:text="@string/userInfo_EditParentButton" />

</RelativeLayout>
