<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutUs" >

    <Button
        android:id="@+id/emailUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/aboutUs_ContactUs" />

    <TextView
        android:id="@+id/websiteTextLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailUs"
        android:layout_below="@+id/emailUs"
        android:layout_marginRight="21dp"
        android:layout_marginTop="72dp"
        android:autoLink="web"
        android:clickable="true"
        android:linksClickable="true"
        android:overScrollMode="always"
        android:text="@string/aboutUs_VisitUs"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#1589FF" />

    <TextView
        android:id="@+id/checkUsOutLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/websiteTextLink"
        android:layout_below="@+id/websiteTextLink"
        android:layout_marginTop="74dp"
        android:text="@string/aboutUs_Social"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/checkUsOutLabel"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="47dp"
        android:text="@string/aboutUs_Facebook" />

    <Button
        android:id="@+id/twitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/facebookButton"
        android:layout_alignBottom="@+id/facebookButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="43dp"
        android:text="@string/aboutUs_Twitter" />

</RelativeLayout>
