<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/menu_StartAppButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/menuStartActivity" />

    <Button
        android:id="@+id/menu_UserInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_LogsButton"
        android:layout_alignRight="@+id/menu_LogsButton"
        android:layout_below="@+id/menu_LogsButton"
        android:layout_marginTop="61dp"
        android:text="@string/menuUserInfo" />

    <Button
        android:id="@+id/menu_LogsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menu_StartAppButton"
        android:layout_alignRight="@+id/menu_StartAppButton"
        android:layout_centerVertical="true"
        android:text="@string/menuLogs" />

</RelativeLayout>
