<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Edit_UserInfo" >

    <CheckBox
        android:id="@+id/setparent_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/username_input"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="149dp"
        android:text="@string/setParent_label" />

    <EditText
        android:id="@+id/user_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="78dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/setparent_box"
        android:layout_alignLeft="@+id/user_age"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/username_input"
        android:layout_alignParentLeft="true"
        android:text="@string/userInfo_AgeText" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_age"
        android:layout_alignLeft="@+id/textView2"
        android:text="@string/userInfo_NameText" />

    <Button
        android:id="@+id/uinfolayout_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/setparent_box"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/submit_label" />

</RelativeLayout>