<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EmailScreen" >

    <TextView
        android:id="@+id/enterEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/email_sendToLabel" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/enterEmailLabel"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/subjectInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subjectLabel"
        android:layout_alignRight="@+id/emailInput"
        android:layout_below="@+id/subjectLabel"
        android:ems="10"
        android:inputType="textMultiLine"
        android:scrollHorizontally="true" />

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/Email_sendEmail"
        android:layout_alignLeft="@+id/messageLabel"
        android:layout_below="@+id/messageLabel"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/Email_sendEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/submit_label" />

    <TextView
        android:id="@+id/messageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/subjectInput"
        android:layout_below="@+id/subjectInput"
        android:layout_marginTop="34dp"
        android:text="@string/email_messageLabel" />

    <TextView
        android:id="@+id/subjectLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailInput"
        android:layout_below="@+id/emailInput"
        android:layout_marginTop="18dp"
        android:text="@string/email_subjectLabel" />

</RelativeLayout>
