<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="84dp"
        android:text="@string/userInfo_EmailText" />

    <Button
        android:id="@+id/parentInfo_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parentEmail_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/submit_label" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/parentEmail_input"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/userInfo_PhoneText" />

    <EditText
        android:id="@+id/parentEmail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parentPhone_input"
        android:layout_marginTop="61dp"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/parentPhone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/parentEmail_input"
        android:ems="10"
        android:inputType="phone" />

</RelativeLayout>
