<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BeginActivity" >
    
    <ImageView
        android:id="@+id/gpsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/gps_disabled" />

    <TextView
        android:id="@+id/begin_InstructionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/begin_Instruction"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/darkBlue"
        android:textSize="30sp" />

    <Button
        android:id="@+id/begin_StopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="72dp"
        android:text="@string/begin_StopButtonText"
        android:background="@drawable/menubuttons"
        android:textSize="45sp" />

    <TextView
        android:id="@+id/begin_InstructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/begin_InstructionHeader"
        android:layout_marginTop="48dp"
        android:text="@string/begin_InstructionText"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/darkBlue" />

</RelativeLayout>