<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Edit_ParentInfo" >

    <EditText
        android:id="@+id/parentEmail_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/textView1"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/parentPhone_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/parentEmail_input"
        android:layout_below="@+id/parentEmail_input"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="66dp"
        android:text="@string/userInfo_EmailText" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/parentInfo_submit"
        android:layout_alignLeft="@+id/textView1"
        android:text="@string/userInfo_PhoneText" />

    <Button
        android:id="@+id/parentInfo_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parentPhone_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        android:text="@string/submit_label" />

</RelativeLayout>